@@ -1,3 +1,11 @@
+2007-01-07  Thomas Moulard  <thomas.moulard@lrde.epita.fr>
+
+	Fix macro names, formatting changes.
+	* liburbi.m4: Rename as...
+	* urbi-with-urbi-sdk.m4: this.
+	* urbi-with-webots.m4: Rename as...
+	* webots.m4: this.
+
 2007-01-05  Thomas Moulard  <thomas.moulard@lrde.epita.fr>
 
 	Fix OpenSSL check.
